--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "deploy": "ng build --configuration production --base-href https://KakarlaDairyFarms.github.io/KakarlaDairyFarms-dev/ && npx angular-cli-ghpages --dir=dist/kakarla-dairy-farm-dev"
+    "deploy:dev": "ng build --configuration production --base-href https://KakarlaDairyFarms.github.io/KakarlaDairyFarms-dev/dev && npx angular-cli-ghpages --dir=dist/kakarla-dairy-farm-dev",
+    "deploy:dev_frontend": "ng build --configuration production --base-href https://KakarlaDairyFarms.github.io/KakarlaDairyFarms-dev/dev_frontend && npx angular-cli-ghpages --dir=dist/kakarla-dairy-farm-dev"
+
   },
   "private": true,
   "dependencies": {
